@@ -1,3 +1,8 @@
+Wed May 18 19:33:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* re.c (rb_reg_match_m_p): Introduce Regexp#match?, which returns
+	  bool and doesn't save backref.
+
 Wed May 18 16:52:03 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* ext/openssl/ossl_pkcs12.c (ossl_pkcs12_initialize): pop errors
